--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,12 +7,19 @@
 </head>
 
 <body>
+
+    <h2>Hot-pot Gallery</h2>
+
     <div class="container">
         <nav>
 <a href="{{ site.baseurl }}/">Gallery index</a>
+&nbsp;&nbsp;&nbsp;
 <a href="{{ site.baseurl }}/history">History</a>
+&nbsp;&nbsp;&nbsp;
 <a href="{{ site.baseurl }}/common ingredients">Common ingredients</a>
+&nbsp;&nbsp;&nbsp;
 <a href="{{ site.baseurl }}/regional variations">Regional variations</a>
+&nbsp;&nbsp;&nbsp;
 <a href="{{ site.baseurl }}/about">About</a>
         </nav>
     </div>
